HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/HeapAllocRawUnsafe/Source/Main.uv
//! Rejected capability-class specimen for HeapAllocator.alloc_raw outside unsafe context.

public procedure heapAllocRawUnsafeReference(context: Context) -> *mut u8 {
    return context.heap~>alloc_raw(16usize)
}
